fixed alien trax packs fade in animation transition delay on mobile devices

--- a/assets/css/alien.scss
+++ b/assets/css/alien.scss
@@ -2090,8 +2090,11 @@ video {
 		}
 	}
 
-	#alien-trax .vertical-card {
+	#alien-trax .alien-trax-packs-container .vertical-card {
 		width: 100%;
+		&:nth-child(even) {
+			transition-delay: 0s;
+		}
 	}
 	.horizontal-card {
 		width: auto;
